updated the compose file to include a volume for storing the data

--- a/fastapi_app/compose.yml
+++ b/fastapi_app/compose.yml
@@ -11,4 +11,6 @@ services:
       - 8001
     ports:
       - 8001:8001
+    volumes:
+      - ./src/data/data.json:/src/data/data.json
     command: uvicorn main:app --port 8001 --host 0.0.0.0
